fix(gathering): add scrollbar to gathering cards

--- a/src/app/components/gathering-page-display/gathering-page-display.component.scss
+++ b/src/app/components/gathering-page-display/gathering-page-display.component.scss
@@ -1,12 +1,17 @@
 
 .resources {
-  margin-top: 10px;
-  display: flex;
-  flex-wrap: wrap;
+  max-height: 150px;
+  overflow-y: auto;
+
+  .resource {
+    margin-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .location-card {
-  min-height: 400px;
+  min-height: 350px;
 
   .favorite {
     position: absolute;
